--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
                             aria-label="Message" required></textarea>
                     </div>
                 </div>
-                <div> data-netlify-recaptcha="true"</div>
+                <div data-netlify-recaptcha="true"></div>
                 <button type="submit" class="btn btn-primary mt-2">Submit</button>
             </form>
         </div>
